removed useless dependencies & updated fa

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -15,7 +15,9 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://cdn.jsdelivr.net/gh/hung1001/font-awesome-pro-v6@44659d9/css/all.min.css" rel="stylesheet" type="text/css" />    <!--
+    <link rel="stylesheet" href="https://rawcdn.githack.com/caotangdaiduong/fontawesome-6-pro/5b723bfaeaa495f9014768c3340f014d4392237f/css/all.css">
+
+    <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
       Only files inside the `public` folder can be referenced from the HTML.
