modified meta tags

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,11 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="eAuction"
-      content="Web site created by NiDea1 | Doruk Çoralı"
+      content="Online auction application."
+    />
+    <meta
+      name="author"
+      content="NiDea1 | Doruk Çoralı"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
