social auth build (discord & github just now)

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link rel="stylesheet" href="https://rawcdn.githack.com/caotangdaiduong/fontawesome-6-pro/5b723bfaeaa495f9014768c3340f014d4392237f/css/all.css">
+    <link rel="stylesheet" href="https://rawcdn.githack.com/vanphonggiang/font-awesome-6.4.0-pro/dafd258fcbf37bf02e85fd379fbf59df55847de3/css/all.css">
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
